--- a/server/.air.toml
+++ b/server/.air.toml
@@ -41,10 +41,10 @@ stop_on_error = true
 send_interrupt = false
 kill_delay = 300
 pre_cmd = [
-  "go vet ./...",
-  "GOFLAGS='-buildvcs=false' golangci-lint run ./...",
   "swag init -g cmd/api/main.go --overridesFile docs/.swaggo --markdownFiles docs/markdown/ --instanceName private --outputTypes json --quiet",
-  "swag init -g cmd/api/main.go --overridesFile docs/.swaggo --markdownFiles docs/markdown/ --exclude transport/http/handlers/admin --outputTypes json --quiet"
+  "swag init -g cmd/api/main.go --overridesFile docs/.swaggo --markdownFiles docs/markdown/ --exclude api/http/handlers/admin --outputTypes json --quiet",
+  "GOFLAGS='-buildvcs=false' golangci-lint run ./...",
+  "go vet ./..."
 ]
 [log]
 time = true
